# nepali-tithi-miti-skill

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SKILL.md  pyproject.toml
.agents/plugins/: marketplace.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  codeql.yml
data/: sample_calendar_days.json
docs/: SKILLS_REPOSITORY.md  nepalipatro-widget.html
marketplace/: nepali-tithi-miti.json
plugins/nepali-tithi-miti/: package.json
plugins/nepali-tithi-miti/.codex-plugin/: plugin.json
plugins/nepali-tithi-miti/skills/nepali-tithi-miti/: LICENSE  openclaw.json
plugins/nepali-tithi-miti/skills/nepali-tithi-miti/agents/: openai.yaml
skills/nepali-tithi-miti/: SKILL.md  openclaw.json
src/nepali_tithi_miti/: __init__.py  calendar.py  cli.py  config.py  constants.py  db.py  hamropatro.py  lookup.py  models.py  parsing.py
tests/: test_calendar_conversion.py  test_db_lookup.py  test_parsing.py  test_scraping.py
