[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nepali-tithi-miti"
version = "0.1.0"
description = "Python CLI and package for Nepali BS date, tithi, miti, and calendar lookup."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Shiva Gaire" }]
dependencies = [
    "beautifulsoup4>=4.12.0",
    "nepali-datetime>=1.0.8.5",
    "requests>=2.31.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
nepali-tithi = "nepali_tithi_miti.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
